增加主题渲染
增加主题渲染配置，后期再进行排版

--- a/lfp_documents/material/overrides/home.html
+++ b/lfp_documents/material/overrides/home.html
@@ -12,13 +12,13 @@
           <img src="assets/images/illustration.png" alt="" width="1659" height="1200" draggable="false">
         </div>
         <div class="tx-hero__content">
-          <h1>Technical documentation that just works</h1>
-          <p>{{ config.site_description }}. Set up in 5 minutes.</p>
-          <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
-            Quick start
+          <h1>架构思维</h1>
+          <p>{{ config.site_description }}.</p>
+          <a href="{{ index | url }}" title="{{ page.next_page.title | e }}" class="md-button">
+            如何开始
           </a>
-          <a href="{{ 'insiders/' | url }}" title="Material for MkDocs Insiders" class="md-button">
-            Get Insiders
+          <a href="{{ index | url }}" title="Material for MkDocs Insiders" class="md-button">
+            如何开始
           </a>
         </div>
       </div>
