--- a/lfp_documents/material/overrides/main.html
+++ b/lfp_documents/material/overrides/main.html
@@ -39,7 +39,7 @@
     <a href="{{ 'insiders/' | url }}" title="Material for MkDocs Insiders">
       <hr>
       <span class="twemoji">
-        {% include ".icons/logo.svg" %}
+        {% include ".icons/github.svg" %}
       </span>
       <span class="twemoji">
         {% include ".icons/material/plus.svg" %}
