--- a/lfp_documents/material/overrides/main.html
+++ b/lfp_documents/material/overrides/main.html
@@ -25,12 +25,12 @@
   <link rel="stylesheet" href="{{ 'assets/stylesheets/overrides.c462ebf7.min.css' | url }}">
 {% endblock %}
 {% block announce %}
-  <a href="https://twitter.com/squidfunk">
-    For updates follow <strong>@squidfunk</strong> on
-    <span class="twemoji twitter">
-      {% include ".icons/fontawesome/brands/twitter.svg" %}
+  <a href="13367267349@163.com">
+    For updates follow <strong>@wytaitaislee</strong> on
+    <span class="twemoji email">
+      {% include ".icons/material/email.svg" %}
     </span>
-    <strong>Twitter</strong>
+    <strong>email</strong>
   </a>
 {% endblock %}
 {% block content %}
