--- a/lfp_documents/material/overrides/home.html
+++ b/lfp_documents/material/overrides/home.html
@@ -12,13 +12,13 @@
           <img src="assets/images/illustration.png" alt="" width="1659" height="1200" draggable="false">
         </div>
         <div class="tx-hero__content">
-          <h1>架构思维</h1>
+          <h1>lfp技术演进</h1>
           <p>{{ config.site_description }}.</p>
-          <a href="{{ index | url }}" title="{{ page.next_page.title | e }}" class="md-button">
+          <a href="{{ index | url }}" title="介绍" class="md-button">
             如何开始
           </a>
-          <a href="{{ index | url }}" title="Material for MkDocs Insiders" class="md-button">
-            如何开始
+          <a href="{{ index | url }}" title="统一规范" class="md-button">
+            编码规范
           </a>
         </div>
       </div>
