--- a/lfp_documents/material/overrides/home.html
+++ b/lfp_documents/material/overrides/home.html
@@ -17,7 +17,7 @@
           <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
             如何开始
           </a>
-          <a href="{{ 'introduction/' | url }}" title="编码规范" class="md-button">
+          <a href="{{ 'introduction/introduction' | url }}" title="编码规范" class="md-button">
             编码规范
           </a>
         </div>
