--- a/lfp_documents/material/overrides/home.html
+++ b/lfp_documents/material/overrides/home.html
@@ -14,7 +14,7 @@
         <div class="tx-hero__content">
           <h1>Technical documentation</h1>
           <p>{{ config.site_description }}.</p>
-          <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
+          <a href="{{ app_base/app_base | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
             如何开始
           </a>
           <a href="{{ 'introduction/introduction' | url }}" title="编码规范" class="md-button">
