修改首页导航

--- a/lfp_documents/material/overrides/home.html
+++ b/lfp_documents/material/overrides/home.html
@@ -14,10 +14,10 @@
         <div class="tx-hero__content">
           <h1>Technical documentation</h1>
           <p>{{ config.site_description }}.</p>
-          <a href="{{ page.next_page.url | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
+          <a href="{{ 'introduction/introduction' | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
             如何开始
           </a>
-          <a href="{{ 'introduction/introduction' | url }}" title="编码规范" class="md-button">
+          <a href="{{ 'programming_rules/programming_rules' | url }}" title="编码规范" class="md-button">
             编码规范
           </a>
         </div>
